syntax = "proto3";

option go_package="hello/protos";
package protos;

service JackieChan {
  rpc GetLonger (LongerRequest) returns (LongerReply) {}
}

message LongerRequest {
  string m = 1;
  string n = 2;
}

message LongerReply {
  string longer = 1;
}